@@ -341,6 +341,8 @@ int main(int argc, char **argv)
 		default:
 			usage(stderr);
 		}
+	if (optind != argc)
+	    usage(stderr);
 
 	do {
 
