@@ -18,6 +18,7 @@ procps-ng NEXT
   * vmstat: Wide mode gives wider proc columns             merge #48
   * watch: Add environment variable for interval           merge #62
   * watch: Add no linewrap option                          issue #182
+  * free,uptime,slabtop: complain about extra ops          issue #181
 
 procps-ng-3.3.16
 ----------------
